fix: founder check icon alignment for different screen sizes

--- a/styles/founder-info.scss
+++ b/styles/founder-info.scss
@@ -7,15 +7,15 @@
     text-align: center;
     margin-bottom: 65px;
     .founder-image {
+        position: relative;
         width: 150px;
         height: 150px;
         border-radius: 50%;
-
         margin-bottom: 38px;
     }
     .icon-container {
-        top: 12%;
-        right: 29.3%;
+        top: 0;
+        right: 0;
         position: absolute;
         box-sizing: border-box;
         display: flex;
@@ -47,5 +47,6 @@
     .description {
         line-height: 24px;
         color: var(--miranda-gray);
+        max-width: 400px;
     }
 }
